--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,6 +14,10 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: var(--pagebg);
+    width: 100vw;
+    height: auto;
+    overflow: hidden;
+    overflow-y: visible;  
 }
 .container {
     max-width: 1100px;
@@ -159,4 +163,11 @@ footer {
     .list {
         grid-template-columns: 1fr;
     }
+}
+div.c404{
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
 }
